--- a/about.html
+++ b/about.html
@@ -17,32 +17,42 @@
         </nav>
     </header>
     <div id="content">
-        <div class="container">
-            <p class="menu-heading">Our Menu</p>
-            <div class="menu">
-                <div class="menu-item salad">
-                    <p class="item-price">Starting from $0.99</p>
-                    <p class="item-name">Salads</p>
-                </div>
-                <div class="menu-item pizza">
-                    <p class="item-price">Starting from $8.99</p>
-                    <p class="item-name">Pizzas</p>
-                </div>
-                <div class="menu-item pasta">
-                    <p class="item-price">Starting from $10.99</p>
-                    <p class="item-name">Pastas</p>
-                </div>
-                <div class="menu-item soup">
-                    <p class="item-price">Starting from $9.99</p>
-                    <p class="item-name">Soups</p>
-                </div>
-            </div>
+        <div class="container about">
+            <h1>About Odin's</h1>
+            <p>
+                Step into a slice of culinary eternity! Established circa 3,200 BCE in the glorious city of Uruk, where
+                civilization
+                itself was born, Odin's has been serving humanity (and the occasional deity) for over
+                five millennia.
+                That’s right—this is not just a restaurant. This is history on a plate.
+            </p>
+            <h1>Our Origins</h1>
+            <p>
+                Founded by the legendary Enheduanna the Elder (self-declared "First Restaurateur of Humanity"), Odin's
+                began as a humble tavern catering to scribes fresh out of cuneiform practice. Legend has it that
+                Enheduanna
+                invented hummus here, inspired by a divine dream sent by Inanna herself. Over the centuries, we’ve
+                expanded our menu and
+                polished our craft—one Mesopotamian mezze platter at a time.
+            </p>
+            <h1>Our Commitment</h1>
+            <p>
+                From the first amphora of beer lovingly served to Gilgamesh himself, to the exquisite lamb kebabs you’ll
+                enjoy today, our mission has always been the same: legendary service, epic meals, and zero complaints
+                (except that one
+                time during the Babylonian captivity… but we don’t talk about that).
+            </p>
+            <h1>Join the Legacy</h1>
+            <p>
+                Odin's isn’t just a restaurant—it’s an odyssey through time, taste, and tantalizing
+                traditions. So why wait another thousand years? Book your table today and become part of the most
+                legendary dining
+                experience in history. Reservations available by clay tablet or modern convenience. Walk-ins welcome
+                (chariots, camels,
+                and horses all accommodated).
+            </p>
+            <p>Dine with us… because five thousand years of satisfied customers can’t be wrong.</p>            
         </div>
-        <!-- <div class="hero">
-            <div class="heading">Welcome to Odin's</div>
-            <div class="msg">Where we serve you like a king.</div>
-            <button id="learn">Learn More</button>
-        </div> -->
     </div>
 </body>
 
